// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CtaCard component renders correctly 1`] = `
<a
  aria-disabled="false"
  class="MuiButtonBase-root CTACard-root-1 test-className"
  href="#"
  tabindex="0"
>
  <div
    class="MuiPaper-root MuiCard-root CTACard-body-2 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <section
      class="CTACard-topBox-3"
    >
      <h5
        class="MuiTypography-root CTACard-heading-4 Typography-root-7 MuiTypography-h5"
        data-testid="typography"
      >
        Call to Action Card
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root CTACard-icon-5"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
          />
        </svg>
      </h5>
    </section>
    <img
      alt="Lorem ipsum"
      class="CTACard-image-6 Media-root-15"
      src="path-to-image"
    />
  </div>
  <span
    class="MuiTouchRipple-root"
  />
</a>
`;

exports[`CtaCard component renders with custom button 1`] = `
<div>
  <button
    class="CTACard-root-17"
    data-testid="custom-button"
    type="button"
  >
    <div
      class="MuiPaper-root MuiCard-root CTACard-body-18 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <section
        class="CTACard-topBox-19"
      >
        <h5
          class="MuiTypography-root CTACard-heading-20 Typography-root-23 MuiTypography-h5"
          data-testid="typography"
        >
          Call to Action Card
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root CTACard-icon-21"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
            />
          </svg>
        </h5>
      </section>
    </div>
  </button>
</div>
`;

exports[`CtaCard component renders with the clickable area around the heading 1`] = `
<div>
  <div
    class="CTACard-root-33"
    data-test-class-name="card"
  >
    <div
      class="MuiPaper-root MuiCard-root CTACard-body-34 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root CTACard-topBox-35"
        href="#"
        tabindex="0"
      >
        <h5
          class="MuiTypography-root CTACard-heading-36 Typography-root-39 MuiTypography-h5"
          data-testid="typography"
        >
          Call to Action Card
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root CTACard-icon-37"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
            />
          </svg>
        </h5>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
      <img
        alt="Lorem ipsum"
        class="CTACard-image-38 Media-root-47"
        src="path-to-image"
      />
    </div>
  </div>
</div>
`;
